# SparkleClient/Classes/OpenAPIs/APIs/DefaultAPI.swift
@@ -12,6 +12,45 @@ import RxSwift
 
 open class DefaultAPI {
     /**
+     書籍データを追加して追加した書籍を返します
+     
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - returns: Observable<Book>
+     */
+    open class func addBooksPost(apiResponseQueue: DispatchQueue = SparkleClientAPI.apiResponseQueue) -> Observable<Book> {
+        return Observable.create { observer -> Disposable in
+            addBooksPostWithRequestBuilder().execute(apiResponseQueue) { result -> Void in
+                switch result {
+                case let .success(response):
+                    observer.onNext(response.body!)
+                case let .failure(error):
+                    observer.onError(error)
+                }
+                observer.onCompleted()
+            }
+            return Disposables.create()
+        }
+    }
+
+    /**
+     書籍データを追加して追加した書籍を返します
+     - POST /addBooks
+     - めせーず
+     - returns: RequestBuilder<Book> 
+     */
+    open class func addBooksPostWithRequestBuilder() -> RequestBuilder<Book> {
+        let path = "/addBooks"
+        let URLString = SparkleClientAPI.basePath + path
+        let parameters: [String:Any]? = nil
+        
+        let url = URLComponents(string: URLString)
+
+        let requestBuilder: RequestBuilder<Book>.Type = SparkleClientAPI.requestBuilderFactory.getBuilder()
+
+        return requestBuilder.init(method: "POST", URLString: (url?.string ?? URLString), parameters: parameters, isBody: false)
+    }
+
+    /**
      メッセージを送信します。
      
      - parameter text: (query) The number of items to skip before starting to collect the result set (optional)
@@ -53,6 +92,45 @@ open class DefaultAPI {
         let requestBuilder: RequestBuilder<Void>.Type = SparkleClientAPI.requestBuilderFactory.getNonDecodableBuilder()
 
         return requestBuilder.init(method: "POST", URLString: (url?.string ?? URLString), parameters: parameters, isBody: false)
+    }
+
+    /**
+     メッセージを取得します
+     
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - returns: Observable<[Any]>
+     */
+    open class func getMessagesGet(apiResponseQueue: DispatchQueue = SparkleClientAPI.apiResponseQueue) -> Observable<[Any]> {
+        return Observable.create { observer -> Disposable in
+            getMessagesGetWithRequestBuilder().execute(apiResponseQueue) { result -> Void in
+                switch result {
+                case let .success(response):
+                    observer.onNext(response.body!)
+                case let .failure(error):
+                    observer.onError(error)
+                }
+                observer.onCompleted()
+            }
+            return Disposables.create()
+        }
+    }
+
+    /**
+     メッセージを取得します
+     - GET /getMessages
+     - メッセージの取得
+     - returns: RequestBuilder<[Any]> 
+     */
+    open class func getMessagesGetWithRequestBuilder() -> RequestBuilder<[Any]> {
+        let path = "/getMessages"
+        let URLString = SparkleClientAPI.basePath + path
+        let parameters: [String:Any]? = nil
+        
+        let url = URLComponents(string: URLString)
+
+        let requestBuilder: RequestBuilder<[Any]>.Type = SparkleClientAPI.requestBuilderFactory.getBuilder()
+
+        return requestBuilder.init(method: "GET", URLString: (url?.string ?? URLString), parameters: parameters, isBody: false)
     }
 
 }
