# SparkleClient/Classes/OpenAPIs/Models/Book.swift
@@ -1,0 +1,26 @@
+//
+// Book.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+/** 書籍モデル */
+public struct Book: Codable { 
+
+
+    public var isbn: String
+    public var title: String?
+    public var publisher: String?
+    public var price: String?
+
+    public init(isbn: String, title: String?, publisher: String?, price: String?) {
+        self.isbn = isbn
+        self.title = title
+        self.publisher = publisher
+        self.price = price
+    }
+
+}
