# SparkleClient/Classes/OpenAPIs/Models/PostMessageResponse.swift
@@ -1,0 +1,23 @@
+//
+// PostMessageResponse.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+/** サーバーの状態のレスポンス */
+public struct PostMessageResponse: Codable { 
+
+
+    public enum Status: String, Codable, CaseIterable {
+        case ok = "ok"
+    }
+    public var status: Status
+
+    public init(status: Status) {
+        self.status = status
+    }
+
+}
